Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ node_modules
 .next
 .vercel
 .env*
+dist
+coverage
+*.log
+.DS_Store
+npm-debug.log
+pnpm-debug.log
+yarn-debug.log
+.idea
+*.local
+*.swp
